2002-10-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c: allow to free(image->app_name)

2002-10-05  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c:
	* dae/opd_image.c: spacing

	* dae/opd_mapping.c:
	* dae/opd_mapping.h: kill op_grow_maps() simplify adding map path
	* dae/opd_parse_proc.c: use opd_add_mapping()

2002-10-05  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.xml: more doc in interpreting results

2002-10-04  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opp_symbols.cpp:
	* pp/opp_symbols.h:
	* pp/outsymbflag.h: implement 'q' 'Q' format flags. Fix #618165
	* pp/op_time_options.cpp: reject these formats for op_time
	* doc/oprofile.1.in:
	* doc/oprofile.xml: document them

2002-10-02  John Levon  <levon@movementarian.org>

	* Makefile.in: use -P to strip dead dirs on dist
 
	* dae/opd_parse_proc.c: spacing

2002-10-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db-*.c/*.h: typedef tweaking for 64 bits arch (signaled
	  by Dave Jones)

	* remove libdb/ChangeLog, old entries are:

	2002-04-20  Philippe Elie  <phil.el@wanadoo.fr>
	* db-insert.c: check for count overflow

	2002-04-20  Philippe Elie  <phil.el@wanadoo.fr>
	* db-manage.c: properly handle already existing db file
	* db.h: extern "C" wrapper

	2002-04-19  Philippe Elie  <phil.el@wanadoo.fr>
	* *.c;*.h: make plugin db in oprofile more easy.

	2002-04-18  Philippe Elie  <phil.el@wanadoo.fr>
	* *.c;*.h: prefix all public identifier with db_.
	  Use typedef as much I can rather than plain unsigned int.

	2002-04-17  Philippe Elie  <phil.el@wanadoo.fr>
	* db-debug.c:
	* db-insert.c:
	* db-manage.c:
	* dbtest.c:
	* db-travel.c:
	* db.h: add file locking and necessary stuff to allow
	  plugging db in an imbedded file format like oprofile
	  samples files.

	2002-04-16  Philippe Elie  <phil.el@wanadoo.fr>
	* db-manage.c: silly bug fix, db works now with
	  malloc/realloc or mmap/mremap memory allocation
	  selected at compile time.
